syntax = "proto3";

option go_package = "./pb";

service KrkStops {
    rpc GetAirly(Installation) returns (Airly) {}
    rpc FindNearestAirlyInstallation(InstallationLocation) returns (Installation) {}
    rpc GetAirlyInstallation(Installation) returns (Installation) {}
    rpc GetDepartures(Stop) returns (stream Departure) {}
    rpc SearchStops(StopSearch) returns (stream Stop) {}
}

message Installation{
    int32 id = 1;
    float latitude = 2;
    float longitude = 3;
}
message Airly {
    int32 caqi = 1;
    string color = 2;
    int32 humidity = 3;
    float temperature = 4;
}
message InstallationLocation {
    float latitude = 1;
    float longitude = 2;
}

message Departure {
    int32 relativeTime = 1;
    string plannedTime = 2;
    string direction = 3;
    string patternText = 4;
    uint32 color = 5;
    string relativeTimeParsed = 6;
    bool predicted = 7;
}
message Stop {
    string shortName = 1;
    string name = 2;
}
message StopSearch {
    string query = 1;
}

// message DepartureColor {
//     string plannedTime = 2;
//     string direction = 3;
// }